JVM crashes with -Xshare:dump -XX:+SegmentedCodeCache

XMLWordPrintable

    • b27
    • generic
    • generic

      A DESCRIPTION OF THE PROBLEM :
      When option -Xshare:dump is specified, SegmentedCodeCache will be disabled automatically, as a result ProfiledCodeCacheHeapSize and NonProfiledCodeCacheHeapSize will be set to be 0. If we force to enable SegmentedCodeCache in command line at the same time, the size of these two region will be kept to be zero, but compiler still try to allocate memory in there two region.

      STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
      java -Xshare:dump -XX:+SegmentedCodeCache -version


      FREQUENCY : always


            Assignee:
            Ioi Lam
            Reporter:
            Webbug Group
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: