8339535: java -Xshare:dump -XX:+SegmentedCodeCache crashes